# onnx2mlir

./: CMakeLists.txt  LICENSE  README.md
docs/: coverage-onnx2linalg.htm
include/onnx2mlir/common/: onnx.hpp
include/onnx2mlir/conversion/: onnx_passes.hpp
include/onnx2mlir/dialect/onnx/: CMakeLists.txt  Onnx.hpp  Onnx.td  OnnxAttrs.hpp  OnnxAttrs.td  OnnxDialect.hpp  OnnxDialect.td  OnnxInterface.hpp  OnnxInterface.td  OnnxInterfaces.hpp  OnnxOps.hpp  OnnxOps.td  OnnxTypes.hpp  OnnxTypes.td
include/onnx2mlir/frontend/: frontend.hpp  onnx.hpp
python/: CMakeLists.txt
python/onnx2mlir/support/: __init__.py  numpy_to_mlir.py
python/src/conversion/passes/: onnx_pass_bindings.cpp  onnx_passes_bindings.cpp
python/src/dialect/: onnx_dialect_bindings.cpp
src/: CMakeLists.txt  main.cpp
src/conversion/: CMakeLists.txt  Passes.td
src/conversion/passes/: CMakeLists.txt  conversion.cpp  onnx_to_linalg.cpp  onnx_to_linalg.hpp  onnx_to_tosa.cpp  transpose.cpp
src/conversion/passes/onnx_to_linalg/: abs.cpp  arith_binary.cpp  arith_unary.cpp  binary.cpp  cast.cpp  compare_binary.cpp  constant.cpp  conv.cpp  flatten.cpp  gemm.cpp  greater.cpp  maxpool.cpp  squeeze.cpp  transpose.cpp  unsqueeze.cpp  where.cpp
src/conversion/python/: onnx_passes_bindings.cpp
src/dialect/onnx/: CMakeLists.txt  Onnx.td  OnnxAttrs.td  OnnxDialect.td  OnnxInterface.td  OnnxOps.td  OnnxOps.td.inc  OnnxTypes.td
src/dialect/onnx/ir/: CMakeLists.txt  onnx_attrs.cpp  onnx_dialect.cpp  onnx_interface.cpp  onnx_ops.cpp  onnx_printers.cpp  onnx_types.cpp
src/dialect/onnx/python/: onnx_dialect_bindings.cpp
src/dialect/onnx/support/: onnx_shapes.cpp
src/frontend/: CMakeLists.txt
src/frontend/converters/: CMakeLists.txt  onnx.cpp
src/frontend/importers/: CMakeLists.txt  onnx.cpp
src/frontend/python/: onnx_importer_bindings.cpp
tests/: CMakeLists.txt
tests/lint/: git-check-lint-format.sh  git-clang-format.sh
tests/python/conversion/: test_onnx_to_linalg_ops.py
tests/python/dialect/: test_onnx_dialect_ir.py
tools/: gen_onnx_cov.py  gen_onnx_dia.py
